fix: coorrect folder

--- a/src/index.html
+++ b/src/index.html
@@ -214,13 +214,13 @@
     <div class="gh">
 
       <div class="GH1">
-        <a class="footer-icon-link" target="_blank" href="https://github.com/SHTAKET1032">
+        <a class="footer-icon-link" target="_blank" href="#">
           <img class="logo-footer" src="./assets/img/icons/gh-dark.svg" alt="gh_logo.svg">
         </a>
       </div>
 
       <div class="GH2">
-        <a class="footer-icon-link" target="_blank" href="https://github.com/milana-bilych">
+        <a class="footer-icon-link" target="_blank" href="#">
           <img class="logo-footer" src="./assets/img/icons/gh-white.svg" alt="gh_logo.svg">
         </a>
       </div>
