fix: import class  App

--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,8 @@
     </div>
 
   </footer>
-    <script src="./components/app/app.js" type="module"></script>
-    <script src="./components/view/pages/cart/cart.js" type="module"></script>
+  <script src="./index.js" type="module"></script>
+    <!-- <script src="./components/app/app.js" type="module"></script>
+    <script src="./components/view/pages/cart/cart.js" type="module"></script> -->
 </body>
 </html>
