fix: add class cart

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="header-right">
       <div class="basket-icon-container">
-        <a href="/components/view/pages/cart/cart.html" class="basket-icon-link">
+        <a href="./components/view/pages/cart/cart.html" class="basket-icon-link">
           <img src="./assets/img/icons/basket-icon.png" class="basket-icon-img" alt="basket-icon.png">
           <div class="basket-circle"><span class="nmb-items">0</div>
           <span class="basket-txt">BASKET</span>
