feat add function onloadMain

--- a/src/index.html
+++ b/src/index.html
@@ -15,17 +15,13 @@
 
     <div class="header-left">
       <div class="sneaker-icon-container">
-        <a href="#" class="sneaker-icon-link">
+        <div class="sneaker-icon-link">
           <img src="./assets/img/icons/sneaker-icon.png" class="sneaker-icon-img" alt="sneaker-icon.png">
           <span class="sneaker-txt">ONLINE STORE</span>
-        </a>
+        </div>
       </div>
     </div>
     <div class="menu">
-      <ul class="nav">
-        <li class="nav-item"><a href="/index.html">Main Page</li>
-        <li class="nav-item"><a href="/components/view/pages/404/404.html">404 Page</li>
-      </ul>
     </div>
     <div class="header-middle">
       <!--<h2 class="cart-total-title">TOTAL AMOUNT</h2>
@@ -34,11 +30,11 @@
     </div>
     <div class="header-right">
       <div class="basket-icon-container">
-        <a href="./components/view/pages/cart/cart.html" class="basket-icon-link">
+        <div class="basket-icon-link">
           <img src="./assets/img/icons/basket-icon.png" class="basket-icon-img" alt="basket-icon.png">
           <div class="basket-circle"><span class="nmb-items">0</div>
           <span class="basket-txt">BASKET</span>
-        </a>
+          </div>
       </div>
     </div>
 
