fix:  correct function createSIdebar

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
   </div>
   <div class="large-section">
-    <!-- <section class="subheader container">
+    <section class="subheader container">
     </section>
   
     <main class="main-container container">
@@ -141,7 +141,7 @@
 
         </div>
   
-      </aside> -->
+      </aside>
   
       <section class="products-container">
   
