fix:  correct function createSIdebar

--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
 
   </div>
   <div class="large-section">
-    <section class="subheader container">
-    </section>
+    <!-- <section class="subheader container">
+    </section> -->
   
     <main class="main-container container">
   
